Replace single notificationUrl with multiple notificationUrls
Application configuration has been updated to allow for multiple notification URLs, enabling the app to send notifications to more than one URL. This change has been made across the project including relevant test cases, configuration files, and core Application java class.